# DBLab1

./: CMakeLists.txt  error.c  error.h  garbage.h  input.h  main.c  master.c  master.h  print.h  slave.h  tables.h
include/: error.h  slave.h
src/: garbage.c  main.c  master.c  slave.c
